add spring boot support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.driver-class-name  = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/arch
-spring.datasource.username = cs_arch
-spring.datasource.password = 6yhnmju7
+spring.datasource.driver-class-name  = ${DATABASE_DRIVER_CLASS}
+spring.datasource.url = ${DATABASE_URL}
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASSWORD}
+
+server.port = 9010
+server.contextPath=/arch
