add swagger support for arch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password = ${DATABASE_PASSWORD}
 
 server.port = 9010
 server.contextPath=/arch
+
+swagger.resourcePackage=com.cshang.arch.controller
+# default swagger url
+# http://localhost:9010/arch/swagger-ui.html
