--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,17 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    swaggerVersion = '2.6.1'
+}
+
 
 dependencies {
     compile "org.hibernate:hibernate-java8"
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile "io.springfox:springfox-swagger2:$swaggerVersion"
+    compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
