--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,17 @@ ext {
 
 
 dependencies {
-    compile "org.hibernate:hibernate-java8"
-    compile('org.springframework.boot:spring-boot-starter')
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile "org.apache.commons:commons-lang3:3.0"
+
+    compile 'org.mindrot:jbcrypt:0.3m'
+
+    compile 'org.passay:passay:1.1.0'
+
+    compile "org.springframework.boot:spring-boot-starter"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-validation"
+    compile "org.springframework.boot:spring-boot-starter-web"
+
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
 
