--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
 
 
 dependencies {
+    compile "org.apache.commons:commons-collections4:4.0"
     compile "org.apache.commons:commons-lang3:3.0"
 
     compile 'org.mindrot:jbcrypt:0.3m'
@@ -41,6 +42,8 @@ dependencies {
 
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
+
+    runtime 'mysql:mysql-connector-java'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
